--- a/src/SolutionColors.csproj
+++ b/src/SolutionColors.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="ColorHelper.cs" />
     <Compile Include="Commands\SetColorCommandFolder.cs" />
+    <Compile Include="Commands\OptionsCommand.cs" />
     <Compile Include="Options\General.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\SetColorCommandSolution.cs" />
