Added custom color picker Fixes #13 [release]

--- a/src/SolutionColors.csproj
+++ b/src/SolutionColors.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="ColorCache.cs" />
     <Compile Include="ColorHelper.cs" />
+    <Compile Include="Commands\CustomCommand.cs" />
     <Compile Include="Commands\SetColorCommandFolder.cs" />
     <Compile Include="Commands\OptionsCommand.cs" />
     <Compile Include="ExtensionMethods\BrushExtensions.cs" />
