--- a/src/SolutionColors.csproj
+++ b/src/SolutionColors.csproj
@@ -52,6 +52,15 @@
     <Compile Include="Commands\OptionsCommand.cs" />
     <Compile Include="ExtensionMethods\BrushExtensions.cs" />
     <Compile Include="ExtensionMethods\WpfExtensions.cs" />
+    <Compile Include="Options\BorderEditor.cs" />
+    <Compile Include="Options\BorderEditorDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Options\BorderEditorDialog.Designer.cs">
+      <DependentUpon>BorderEditorDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Options\BorderSettings.cs" />
+    <Compile Include="Options\BorderTypeConverter.cs" />
     <Compile Include="Options\General.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\SetColorCommandSolution.cs" />
@@ -115,6 +124,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Options\BorderEditorDialog.resx">
+      <DependentUpon>BorderEditorDialog.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
