--- a/src/SolutionColors.csproj
+++ b/src/SolutionColors.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Commands\OptionsCommand.cs" />
     <Compile Include="ExtensionMethods\BrushExtensions.cs" />
     <Compile Include="ExtensionMethods\WpfExtensions.cs" />
+    <Compile Include="GitHelper.cs" />
     <Compile Include="Options\BorderEditor.cs" />
     <Compile Include="Options\BorderEditorDialog.cs">
       <SubType>Form</SubType>
@@ -61,6 +62,7 @@
     </Compile>
     <Compile Include="Options\BorderSettings.cs" />
     <Compile Include="Options\BorderTypeConverter.cs" />
+    <Compile Include="Options\EnumDescriptionConverter.cs" />
     <Compile Include="Options\General.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\SetColorCommandSolution.cs" />
