--- a/src/SolutionColors.csproj
+++ b/src/SolutionColors.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Options\BorderTypeConverter.cs" />
     <Compile Include="Options\EnumDescriptionConverter.cs" />
     <Compile Include="Options\General.cs" />
+    <Compile Include="Options\TaskBarOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\SetColorCommandSolution.cs" />
     <Compile Include="SolutionColorsPackage.cs" />
