--- a/src/SolutionColors.csproj
+++ b/src/SolutionColors.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Options\BorderSettings.cs" />
     <Compile Include="Options\BorderTypeConverter.cs" />
     <Compile Include="Options\EnumDescriptionConverter.cs" />
+    <Compile Include="Options\FileSelectorDialog.cs" />
     <Compile Include="Options\General.cs" />
     <Compile Include="Options\TaskBarOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
