--- a/src/SolutionColors.csproj
+++ b/src/SolutionColors.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ColorHelper.cs" />
     <Compile Include="Commands\CustomCommand.cs" />
     <Compile Include="Commands\IconCommands.cs" />
+    <Compile Include="Commands\OptionsCommand.cs" />
     <Compile Include="Commands\SetColorCommandFolder.cs" />
     <Compile Include="ExtensionMethods\BrushExtensions.cs" />
     <Compile Include="ExtensionMethods\WpfExtensions.cs" />
